test_translator/tests/data/checkpoint_2/core/fail/03_dict_bool_none_keys/tests.py
assert get_bool_dict() == {True: "yes", False: "no"}
assert get_none_dict() == {None: "empty", "valid": 42}
